Added some stuff to the intro. and city picture.

--- a/codes/index.html
+++ b/codes/index.html
@@ -17,7 +17,7 @@
 			<a href="villageGov.html" target="_blank">VILLAGE GOVERNMENT</a>
 			<a href="importantPlaces.html" target="_blank">IMPORTANT PLACES</a>
 		</div>
-		<p><img src="../res/CAPTURE.PNG" id = "img1"></p>
+		<p><img src="../res/CAPTURE.PNG" id = "img1" alt="IMAGE OF BANDARAGAMA MAP"></p>
 
 		<div align="center">
 			<div id ="para">
