--- a/codes/intro.html
+++ b/codes/intro.html
@@ -4,8 +4,14 @@
 		<link rel="stylesheet" type="text/css" href="../res/main.css">
 	</head>
 	<body>
-
-
+		<b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b>
+		<h1 id = "name">BANDARAGAMA</h1>
+		<p><img src="../res/B.PNG" id = "img1" alt="PICTURE OF BANDARAGAMA TOWN"></p>
+		<div align = "center">
+			<div id = "para">
+				Type the introduction here
+			</div>
+		</div>
 
 		<div id="fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
