improved the info page. littlebit left to go
add a detailed description to the "how my village got the name" & "special facts".

--- a/codes/index.html
+++ b/codes/index.html
@@ -7,15 +7,15 @@
 	</head>
 	<body>
 		<b><div id = "heading">MY VILLAGE</div></b>
-		<h1 id = "name">BANDARAGAMA</h1>
+		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
 		<div align="center">
-			<a href="intro.html" target="_blank">INTRO</a>
-			<a href="relPlaces.html" target="_blank">RELIGIOUS PLACES</a>
-			<a href="schools.html" target="_blank">SCHOOLS</a>
-			<a href="specialAtr.html" target="_blank">SPECIAL PLACES</a>
-			<a href="beautifulPlaces.html" target="_blank">BEAUTIFUL PLACES</a>
-			<a href="villageGov.html" target="_blank">VILLAGE GOVERNMENT</a>
-			<a href="importantPlaces.html" target="_blank">IMPORTANT PLACES</a>
+			<a href="intro.html" target="_blank" id = "nav">INTRO</a>
+			<a href="relPlaces.html" target="_blank" id = "nav">RELIGIOUS PLACES</a>
+			<a href="schools.html" target="_blank" id = "nav">SCHOOLS</a>
+			<a href="specialAtr.html" target="_blank" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_blank" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="villageGov.html" target="_blank" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href="importantPlaces.html" target="_blank" id = "nav">IMPORTANT PLACES</a>
 		</div>
 		<p><img src="../res/CAPTURE.PNG" id = "img1" alt="IMAGE OF BANDARAGAMA MAP"></p>
 
