--- a/codes/intro.html
+++ b/codes/intro.html
@@ -5,14 +5,53 @@
 	</head>
 	<body>
 		<b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b>
-		<h1 id = "name">BANDARAGAMA</h1>
+		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
 		<p><img src="../res/B.PNG" id = "img1" alt="PICTURE OF BANDARAGAMA TOWN"></p>
-		<div align = "center">
+		<table border="0" align="center">
+			<tr>
+				<td>
+					<div align = "center">
+						<div>
+							<h2 id = "name1">Kaluthara District</h2>
+							<p id = "para">
+								Kalutara District (Sinhala: කඵතර දිස්ත්‍රික්කය;<br> Tamil: களுத்துறை மாவட்டம் Kaḷuttuṟai Māvaṭṭam)<br> is one of the 25 districts of Sri Lanka,<br> the second level administrative division of the country.<br> The district is administered by a District Secretariat headed by<br> a District Secretary (previously known as a Government Agent)<br>appointed by the central government of Sri Lanka.<br> The capital of the district is the town of Kalutara.
+							</p>
+							<h2 id = "name1">Geography</h2>
+							<p id = "para">
+								
+								Kalutara District is located in the south west of Sri Lanka<br> and has an area of 1,598 square kilometres (617 sq mi).<br> It is bounded by Colombo District from north,<br>Ratnapura District from east,<br>Galle District from south,<br>and by the Indian Ocean from west.
+							</p>
+							<h2 id = "name1">Administrative units</h2>
+							<p id = "para">
+								Kalutara District is divided into 14<br> Divisional Secretary's Division (DS Divisions),<br>each headed by a Divisional Secretary<br>(previously known as an Assistant Government Agent).<br> The DS Divisions are further sub-divided into<br>762 Grama Niladhari Divisions (GN Divisions).
+							</p>
+						</div>
+					</div>
+				</td>
+				<td>
+					<div id = "name2">Kaluthara District</div><br>
+					<div id = "name2">කඵතර දිස්ත්‍රික්කය</div><br>
+					<div id = "name2">களுத்துறை மாவட்டம்</div><br>
+
+					<img src = "../res/Kalutara.png" alt = "Image of kaluthara district on the way">
+				</td>
+			</tr>
+		</table>
+		<br>
+		<div align="center"><h2 id = "name">How The Village Got The Name</h2></div>
+		<div align="center">
 			<div id = "para">
-				Type the introduction here
+				It came with a name out of the box.
 			</div>
 		</div>
-
+		<br>
+		<div align="center"><h2 id = "name">Other Special Facts</h2></div>
+		<div align="center">
+			<div id = "para">
+				Nuwan bakers sells the best maalu paan in the Village.
+			</div>
+		</div>
+		<br><br>
 		<div id="fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
