Fully Finished the intro.html & index.html
completed the intro and index.

Hip.. Hip...  Hurreeeyyyy.....

--- a/codes/intro.html
+++ b/codes/intro.html
@@ -1,17 +1,29 @@
 <html>
 	<head>
 		<title>INTRO</title>
-		<link rel="stylesheet" type="text/css" href="../res/main.css">
+		<link rel = "stylesheet" type = "text/css" href = "../res/main.css">
 	</head>
 	<body>
-		<b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b>
-		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-		<p><img src="../res/B.PNG" id = "img1" alt="PICTURE OF BANDARAGAMA TOWN"></p>
-		<table border="0" align="center">
+		<table border = "0">
+			<tr>
+				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
+				<td><b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b></td>
+			</tr>
+		</table>
+		<div align = "center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<p><img src = "../res/B.PNG" id = "img1" alt = "PICTURE OF BANDARAGAMA TOWN"></p>
+		<br><br>
+		<div align = "center">
+			<a href = "#kalutharaDist" id = "nav">KALUTHARA DISTRICT</a>
+			<a href = "#VillNme" id = "nav">HOW THE VILLAGE GOT THE NAME</a>
+			<a href = "#OthrFacts" id = "nav">OTHER FACTS</a>
+		</div>
+		<br><br>
+		<table border = "0" align="center">
 			<tr>
 				<td>
 					<div align = "center">
-						<div>
+						<div id = "kalutharaDist">
 							<h2 id = "name1">Kaluthara District</h2>
 							<p id = "para">
 								Kalutara District (Sinhala: කඵතර දිස්ත්‍රික්කය;<br> Tamil: களுத்துறை மாவட்டம் Kaḷuttuṟai Māvaṭṭam)<br> is one of the 25 districts of Sri Lanka,<br> the second level administrative division of the country.<br> The district is administered by a District Secretariat headed by<br> a District Secretary (previously known as a Government Agent)<br>appointed by the central government of Sri Lanka.<br> The capital of the district is the town of Kalutara.
@@ -38,21 +50,26 @@
 			</tr>
 		</table>
 		<br>
-		<div align="center"><h2 id = "name">How The Village Got The Name</h2></div>
+		<div align="center" id = "VillNme"><h2 id = "name">How The Village Got The Name</h2></div>
 		<div align="center">
 			<div id = "para">
-				It came with a name out of the box.
-			</div>
-		</div>
-		<br>
-		<div align="center"><h2 id = "name">Other Special Facts</h2></div>
-		<div align="center">
-			<div id = "para">
-				Nuwan bakers sells the best maalu paan in the Village.
+				Bandaragama means "Stroage Village". "Bandara" or "Bhandaraya" means stroage.<br>
+				"Gama" or "Gramaya" means village. In the times of King Alakeshwara,<br> When he
+				rules the Kingdom "Raigampura", "Bandaragama" or "Bhandara Gramaya"<br> was his
+				place to store his treashures. 
 			</div>
 		</div>
 		<br><br>
-		<div id="fotter">
+		<div align = "center"><img src = "../res/earlyLankaMap.jpg" id="img1"></div>
+		<br>
+		<div align = "center" id = "OthrFacts"><h2 id = "name">Other Special Facts</h2></div>
+		<div align = "center">
+			<div id = "para">
+				With its terrain of Paddy Fields,<br>Coconut estates and Rubber estates,<br> Banadaragama provides ample opportunities for trekking,<br> bird watching and cycling.<br>Bandaragama wetlands are rich with birdlife.
+			</div>
+		</div>
+		<br><br>
+		<div id = "fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
 	</body>
