--- a/codes/index.html
+++ b/codes/index.html
@@ -9,13 +9,13 @@
 		<b><div id = "heading">MY VILLAGE</div></b>
 		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
 		<div align="center">
-			<a href="intro.html" target="_blank" id = "nav">INTRO</a>
-			<a href="relPlaces.html" target="_blank" id = "nav">RELIGIOUS PLACES</a>
-			<a href="schools.html" target="_blank" id = "nav">SCHOOLS</a>
-			<a href="specialAtr.html" target="_blank" id = "nav">SPECIAL PLACES</a>
-			<a href="beautifulPlaces.html" target="_blank" id = "nav">BEAUTIFUL PLACES</a>
-			<a href="villageGov.html" target="_blank" id = "nav">VILLAGE GOVERNMENT</a>
-			<a href="importantPlaces.html" target="_blank" id = "nav">IMPORTANT PLACES</a>
+			<a href="intro.html" target="_self" id = "nav">INTRO</a>
+			<a href="relPlaces.html" target="_self" id = "nav">RELIGIOUS PLACES</a>
+			<a href="schools.html" target="_self" id = "nav">SCHOOLS</a>
+			<a href="specialAtr.html" target="_self" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="villageGov.html" target="_self" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href="importantPlaces.html" target="_self" id = "nav">IMPORTANT PLACES</a>
 		</div>
 		<p><img src="../res/CAPTURE.PNG" id = "img1" alt="IMAGE OF BANDARAGAMA MAP"></p>
 
