added the same template to all the pages
little re touch

--- a/codes/intro.html
+++ b/codes/intro.html
@@ -7,6 +7,7 @@
 		<table border = "0">
 			<tr>
 				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
+				<td>&emsp;&emsp;</td>
 				<td><b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b></td>
 			</tr>
 		</table>
