--- a/codes/schools.html
+++ b/codes/schools.html
@@ -1,8 +1,16 @@
 <html>
 <head>
-	<title></title>
+	<title>SCHOOLS</title>
+	<link rel = "stylesheet" type="text/css" href="../res/main.css">
 </head>
 <body>
-
+	<table border="0">
+		<tr>
+			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
+			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
+			<td><b><div id = "heading">SCHOOLS</div></b></td>
+		</tr>
+	</table>
+	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
 </body>
 </html>
