Completed relPlaces.html
Completed relPlaces.html and did some minar changes

--- a/codes/intro.html
+++ b/codes/intro.html
@@ -54,7 +54,7 @@
 		<div align="center" id = "VillNme"><h2 id = "name">How The Village Got The Name</h2></div>
 		<div align="center">
 			<div id = "para">
-				Bandaragama means "Stroage Village". "Bandara" or "Bhandaraya" means stroage.<br>
+				Bandaragama means "Stroage Village". "Bandara" or "Bhandara" means stroage.<br>
 				"Gama" or "Gramaya" means village. In the times of King Alakeshwara,<br> When he
 				rules the Kingdom "Raigampura", "Bandaragama" or "Bhandara Gramaya"<br> was his
 				place to store his treashures. 
