--- a/codes/relPlaces.html
+++ b/codes/relPlaces.html
@@ -1,16 +1,32 @@
 <html>
-<head>
-	<title>RELIGIOUS PLACES</title>
-	<link rel = "stylesheet" type="text/css" href="../res/main.css">
-</head>
-<body>
-	<table border="0">
-		<tr>
-			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-			<td><b><div id = "heading">RELIGIOUS PLACES</div></b></td>
-		</tr>
-	</table>
-	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-</body>
+	<head>
+		<title>RELIGIOUS PLACES</title>
+		<link rel = "stylesheet" type="text/css" href="../res/main.css">
+	</head>
+	<body>
+		<table border="0">
+			<tr>
+				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
+				<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
+				<td><b><div id = "heading">RELIGIOUS PLACES</div></b></td>
+			</tr>
+		</table>
+		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<h2 id = "name1">Weda Pansala(Purana Maha Viharaya)</h2>
+		<img src = "../res/WedaPansala.PNG" id = "img1" alt = "Picture of WedaPansala">
+		<br><br>
+		<div align = "center">
+			<div id = "para">
+				This temple is well known for really talented<br>
+				monks who can do celon western medical treatments.<br>
+				Thats why this temple is called "Weda Pansala".<br>
+				"Weda" means medical and "Pansala" means temple.<br>
+				Its real name is "Puraana Maha Viharaya".
+			</div>
+		</div>
+		<br><br>
+		<div id = "fotter">
+			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
+		</div>
+	</body>
 </html>
