Completed schoool.html

--- a/codes/schools.html
+++ b/codes/schools.html
@@ -1,16 +1,42 @@
 <html>
-<head>
-	<title>SCHOOLS</title>
-	<link rel = "stylesheet" type="text/css" href="../res/main.css">
-</head>
-<body>
-	<table border="0">
-		<tr>
-			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-			<td><b><div id = "heading">SCHOOLS</div></b></td>
-		</tr>
-	</table>
-	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-</body>
+	<head>
+		<title>SCHOOLS</title>
+		<link rel = "stylesheet" type="text/css" href="../res/main.css">
+	</head>
+	<body>
+		<table border="0">
+			<tr>
+				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
+				<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
+				<td><b><div id = "heading">SCHOOLS</div></b></td>
+			</tr>
+		</table>
+		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<h2 id = "name1">Bandaragama Central College</h2>
+		<div align="center"><img src = "../res/BCC.PNG" id = "img1" alt = "Picture of BCC"></div>
+		<br><br>
+		<div align = "center">
+			<div id = "para">
+				Bandaragama Central College<br> is an old school with a long history of 113 years<br>and one of the largest mixed school in Sri Lanka.<br> During this long journey Bandaragama Central College<br> has achieved several remarkable achievements.<br><br><br>
+
+				According to the historical annals the school established with<br> only 4 students in 1900 as "Weedagama Ladies College".<br> In the year of 1922 a village nobleman of Bandaragama<br> D.H.R.W. Kannangara (Thalgaspitiye Ralahami),<br> donated a piece of land (2 Acres) to set up the present school.<br>During that time it was named as "Junior Ladies College,<br> Bandaragama". Mrs.D.B.W. Kannangara,<br> Mrs.D.C.D. Kulathunga, Mrs.W.P. Liyanage,<br> Mrs.T.G.K. Wijemanna served as the principals of the school earlier.<br> They were able to uplift the college as a one of the leading school.<br> The college was functioning as Central College since 1980.<br><br><br>
+
+				Today the college known as Bandaragama Central College<br> and it is a National School.<br> The present principal Mr. P. R. Premasiri Perera<br> was appointed in 26th of November 2011.<br> As a result of his untiring and dedicated services<br> Bandaragama Central College<br> has got ability to compete with other leading schools in both<br> their educational as well as extra-curricular activities.<br><br><br>
+				The college has now developed rapidly.<br> Today Bandaragama Central College provides Primary<br> and Secondary education for more than 3500 students<br>and is blessed with clever and hardworking academic staff.<br><br><br>
+
+				<i>This is the School I did my O/Ls and Primary Education.</i>
+			</div>
+		</div>
+		<br>
+		<div align="center">
+			<img src = "../res/scl1.PNG" id = "img1" alt = "img01"><br><br>
+			<img src = "../res/scl2.PNG" id = "img1" alt = "img02"><br><br>
+			<img src = "../res/scl3.PNG" id = "img1" alt = "img03"><br><br>
+			<img src = "../res/scl4.PNG" id = "img1" alt = "img04"><br><br>
+			<img src = "../res/scl5.PNG" id = "img1" alt = "img05"><br><br>
+		</div>
+		<div id = "fotter">
+			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
+		</div>
+	</body>
 </html>
