Did soem major changes. completed beautifulplaces. made halfway through in important places
added alot of pics and vids

--- a/codes/beautifulPlaces.html
+++ b/codes/beautifulPlaces.html
@@ -1,16 +1,25 @@
 <html>
-<head>
-	<title>BEAUTIFUL PLACES</title>
-	<link rel = "stylesheet" type="text/css" href="../res/main.css">
-</head>
-<body>
-	<table border="0">
-		<tr>
-			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-			<td><b><div id = "heading">BEAUTIFUL PLACES</div></b></td>
-		</tr>
-	</table>
-	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-</body>
+	<head>
+		<title>BEAUTIFUL PLACES</title>
+		<link rel = "stylesheet" type="text/css" href="../res/main.css">
+	</head>
+	<body>
+		<div align="center">
+			<b><div id = "heading">BEAUTIFUL PLACES</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<br>
+		<h2 id = "name1"> Gammampila Lake and the Sorrounding</h2>
+		<div align="center">
+			<iframe width="1280" height="720" src="../res/ban.mp4" id = "vid"></iframe>
+			<br>
+			<!--<img src = "../res/ban1.jpg" id = "img1">-->
+		</div>
+		<br><br>
+		<div id = "fotter">
+			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |
+			</fotter>
+		</div>
+	</body>
 </html>
