--- a/codes/specialAtr.html
+++ b/codes/specialAtr.html
@@ -1,16 +1,29 @@
 <html>
-<head>
-	<title>SPECIAL PLACES</title>
-	<link rel = "stylesheet" type="text/css" href="../res/main.css">
-</head>
-<body>
-	<table border="0">
-		<tr>
-			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-			<td><b><div id = "heading">SPECIAL PLACES</div></b></td>
-		</tr>
-	</table>
-	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-</body>
+	<head>
+		<title>SPECIAL PLACES</title>
+		<link rel = "stylesheet" type="text/css" href="../res/main.css">
+	</head>
+	<body>
+		<div align="center">
+			<b><div id = "heading">SPECIAL PLACES</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<h2 id = "name1">Sri Lanka Carting Circuit Bandaragama</h2>
+		<div align="center">
+			<iframe width="1280" height="720" src="../res/kartingCircuitVid.mp4" id = "vid"></iframe>
+			<p id = "para">This is the largest karting circuit in Sri Lanka located in<br> Bandaragama.<br> The circuit comprises a 1216 -meter international racing track with<br> multiple layouts also can run 2 different races simultaneously.<br> Additionally 171-metre kiddies’ rental track,<br> designed and built to international specifications.<br> Easily accessible via the Southern Expressway,<br> Sri Lanka Karting Circuit provides the opportunity for<br> karting enthusiasts to experience professional motorsports<br> with the facility to practice and race as much as they want.<br> A fleet of rental karts and safety gear is made available<br> for anyone who wants to try out the sport or simply have fun.<br> Proud host of X30 Asia Cup 2018</p>
+			<br>
+			<br>
+			<img src = "../res/kar1.jpg" id = "img1" alt = "img01"><br><br>
+			<img src = "../res/kar2.jpg" id = "img1" alt = "img02"><br><br>
+			<img src = "../res/kar3.jpg" id = "img1" alt = "img03"><br><br>
+			<img src = "../res/kar4.jpg" id = "img1" alt = "img04"><br><br>
+			<img src = "../res/kar5.jpg" id = "img1" alt = "img05"><br><br>
+		</div>
+		<div id = "fotter">
+			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |
+			</fotter>
+		</div>
+	</body>
 </html>
