--- a/codes/importantPlaces.html
+++ b/codes/importantPlaces.html
@@ -1,16 +1,19 @@
 <html>
-<head>
-	<title>IMPORTANT PLACES</title>
-	<link rel = "stylesheet" type="text/css" href="../res/main.css">
-</head>
-<body>
-	<table border="0">
-		<tr>
-			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-			<td><b><div id = "heading">IMPORTANT PLACES</div></b></td>
-		</tr>
-	</table>
-	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-</body>
+	<head>
+		<title>IMPORTANT PLACES</title>
+		<link rel = "stylesheet" type="text/css" href="../res/main.css">
+	</head>
+	<body>
+		<div align="center">
+			<b><div id = "heading">IMPORTANT PLACES</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<div align = "center">
+			<h2 id = "name1">Bandaragama Police Station</h2>
+			<img src = "../res/policeban.PNG" id = "img1"><br>
+			<h2 id = "name1">Bandaragama Post Office</h2>
+			<img src = "../res/postban.jpg" id = "img1"><br>
+		</div>
+	</body>
 </html>
