--- a/codes/intro.html
+++ b/codes/intro.html
@@ -4,14 +4,11 @@
 		<link rel = "stylesheet" type = "text/css" href = "../res/main.css">
 	</head>
 	<body>
-		<table border = "0">
-			<tr>
-				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-				<td>&emsp;&emsp;</td>
-				<td><b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b></td>
-			</tr>
-		</table>
-		<div align = "center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<div align="center">
+			<b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
 		<p><img src = "../res/B.PNG" id = "img1" alt = "PICTURE OF BANDARAGAMA TOWN"></p>
 		<br><br>
 		<div align = "center">
