--- a/codes/relPlaces.html
+++ b/codes/relPlaces.html
@@ -4,14 +4,11 @@
 		<link rel = "stylesheet" type="text/css" href="../res/main.css">
 	</head>
 	<body>
-		<table border="0">
-			<tr>
-				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-				<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-				<td><b><div id = "heading">RELIGIOUS PLACES</div></b></td>
-			</tr>
-		</table>
-		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<div align="center">
+			<b><div id = "heading">RELIGIOUS PLACES</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
 		<h2 id = "name1">Weda Pansala(Purana Maha Viharaya)</h2>
 		<img src = "../res/WedaPansala.PNG" id = "img1" alt = "Picture of WedaPansala">
 		<br><br>
