--- a/codes/schools.html
+++ b/codes/schools.html
@@ -4,14 +4,11 @@
 		<link rel = "stylesheet" type="text/css" href="../res/main.css">
 	</head>
 	<body>
-		<table border="0">
-			<tr>
-				<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-				<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-				<td><b><div id = "heading">SCHOOLS</div></b></td>
-			</tr>
-		</table>
-		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<div align="center">
+			<b><div id = "heading">SCHOOLS</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
 		<h2 id = "name1">Bandaragama Central College</h2>
 		<div align="center"><img src = "../res/BCC.PNG" id = "img1" alt = "Picture of BCC"></div>
 		<br><br>
@@ -26,9 +23,8 @@
 
 				<i>This is the School I did my O/Ls and Primary Education.</i>
 			</div>
-		</div>
-		<br>
-		<div align="center">
+			<br>
+			<br>
 			<img src = "../res/scl1.PNG" id = "img1" alt = "img01"><br><br>
 			<img src = "../res/scl2.PNG" id = "img1" alt = "img02"><br><br>
 			<img src = "../res/scl3.PNG" id = "img1" alt = "img03"><br><br>
