--- a/codes/villageGov.html
+++ b/codes/villageGov.html
@@ -1,16 +1,13 @@
 <html>
-<head>
-	<title>VILLAGE GOVERNMENT</title>
-	<link rel = "stylesheet" type="text/css" href="../res/main.css">
-</head>
-<body>
-	<table border="0">
-		<tr>
-			<td><a href = "index.html" id = "backnav">Back To<br>Main Page</a></td>
-			<td>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</td>
-			<td><b><div id = "heading">VILLAGE GOVERNMENT</div></b></td>
-		</tr>
-	</table>
-	<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-</body>
+	<head>
+		<title>VILLAGE GOVERNMENT</title>
+		<link rel = "stylesheet" type="text/css" href="../res/main.css">
+	</head>
+	<body>
+		<div align="center">
+			<b><div id = "heading">VILLAGE GOVERNMENT</div></b>
+			<h1 id = "name">BANDARAGAMA</h1><br>
+			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+	</body>
 </html>
