halfway completed villageGov

--- a/codes/villageGov.html
+++ b/codes/villageGov.html
@@ -9,5 +9,13 @@
 			<h1 id = "name">BANDARAGAMA</h1><br>
 			<a href = "index.html" id = "backnav">Back To Main Page</a>
 		</div>
+		<div align = "center">
+			<p id = "para">
+				My village is govened my a Pradeshiya Sabha. The current governer is Mr. Manoj Sanjaya.<br>
+
+			</p>
+			<br>
+			<img src = "../res/banmap.jpg" id = "img1">
+		</div>
 	</body>
 </html>
