Added navigation panel to all web pages

--- a/codes/intro.html
+++ b/codes/intro.html
@@ -6,8 +6,16 @@
 	<body>
 		<div align="center">
 			<b><div id = "heading">INTRODUCTION TO MY VILLAGE</div></b>
-			<h1 id = "name">BANDARAGAMA</h1><br>
-			<a href = "index.html" id = "backnav">Back To Main Page</a>
+			<h1 id = "name">BANDARAGAMA</h1><br>	
+		</div>
+		<div align="center">
+			<a href = "index.html" id = "nav">MAIN PAGE</a>
+			<a href="relPlaces.html" target="_self" id = "nav">RELIGIOUS PLACES</a>
+			<a href="schools.html" target="_self" id = "nav">SCHOOLS</a>
+			<a href="specialAtr.html" target="_self" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="villageGov.html" target="_self" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href="importantPlaces.html" target="_self" id = "nav">IMPORTANT PLACES</a>
 		</div>
 		<p><img src = "../res/B.PNG" id = "img1" alt = "PICTURE OF BANDARAGAMA TOWN"></p>
 		<br><br>
