--- a/codes/schools.html
+++ b/codes/schools.html
@@ -7,7 +7,15 @@
 		<div align="center">
 			<b><div id = "heading">SCHOOLS</div></b>
 			<h1 id = "name">BANDARAGAMA</h1><br>
-			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<div align="center">
+			<a href = "index.html" id = "nav">MAIN PAGE</a>
+			<a href = "intro.html" id = "nav">INTRODUCTION</a>
+			<a href="relPlaces.html" target="_self" id = "nav">RELIGIOUS PLACES</a>
+			<a href="specialAtr.html" target="_self" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="villageGov.html" target="_self" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href="importantPlaces.html" target="_self" id = "nav">IMPORTANT PLACES</a>
 		</div>
 		<h2 id = "name1">Bandaragama Central College</h2>
 		<div align="center"><img src = "../res/BCC.PNG" id = "img1" alt = "Picture of BCC"></div>
