--- a/codes/importantPlaces.html
+++ b/codes/importantPlaces.html
@@ -7,13 +7,24 @@
 		<div align="center">
 			<b><div id = "heading">IMPORTANT PLACES</div></b>
 			<h1 id = "name">BANDARAGAMA</h1><br>
-			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<div align="center">
+			<a href = "index.html" id = "nav">MAIN PAGE</a>
+			<a href = "intro.html" id = "nav">INTRODUCTION</a>
+			<a href = "schools.html" id = "nav">SCHOOLS</a>
+			<a href = "specialAtr.html" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="villageGov.html" target="_self" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href="relPlaces.html" target="_self" id = "nav">RELIGIOUS PLACES</a>
 		</div>
 		<div align = "center">
 			<h2 id = "name1">Bandaragama Police Station</h2>
 			<img src = "../res/policeban.PNG" id = "img1"><br>
 			<h2 id = "name1">Bandaragama Post Office</h2>
 			<img src = "../res/postban.jpg" id = "img1"><br>
+		</div>
+		<div id="fotter">
+			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
 	</body>
 </html>
