--- a/codes/relPlaces.html
+++ b/codes/relPlaces.html
@@ -7,7 +7,15 @@
 		<div align="center">
 			<b><div id = "heading">RELIGIOUS PLACES</div></b>
 			<h1 id = "name">BANDARAGAMA</h1><br>
-			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<div align="center">
+			<a href = "index.html" id = "nav">MAIN PAGE</a>
+			<a href="intro.html" target="_self" id = "nav">INTRODUCTION</a>
+			<a href="schools.html" target="_self" id = "nav">SCHOOLS</a>
+			<a href="specialAtr.html" target="_self" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="villageGov.html" target="_self" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href="importantPlaces.html" target="_self" id = "nav">IMPORTANT PLACES</a>
 		</div>
 		<h2 id = "name1">Weda Pansala(Purana Maha Viharaya)</h2>
 		<img src = "../res/WedaPansala.PNG" id = "img1" alt = "Picture of WedaPansala">
