--- a/codes/villageGov.html
+++ b/codes/villageGov.html
@@ -7,15 +7,26 @@
 		<div align="center">
 			<b><div id = "heading">VILLAGE GOVERNMENT</div></b>
 			<h1 id = "name">BANDARAGAMA</h1><br>
-			<a href = "index.html" id = "backnav">Back To Main Page</a>
+		</div>
+		<div align="center">
+			<a href = "index.html" id = "nav">MAIN PAGE</a>
+			<a href = "intro.html" id = "nav">INTRODUCTION</a>
+			<a href = "schools.html" id = "nav">SCHOOLS</a>
+			<a href = "specialAtr.html" id = "nav">SPECIAL PLACES</a>
+			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href="relPlaces.html" target="_self" id = "nav">RELIGIOUS PLACES</a>
+			<a href="importantPlaces.html" target="_self" id = "nav">IMPORTANT PLACES</a>
 		</div>
 		<div align = "center">
 			<p id = "para">
 				My village is govened my a Pradeshiya Sabha. The current governer is Mr. Manoj Sanjaya.<br>
-
 			</p>
 			<br>
 			<img src = "../res/banmap.jpg" id = "img1">
+		</div>
+		<br>
+		<div id="fotter">
+			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
 	</body>
 </html>
