addaed meta tag . and correvted spacing standards.

--- a/codes/index.html
+++ b/codes/index.html
@@ -2,30 +2,31 @@
 	<head>
 
 		<title>MY VILLAGE</title>
-		<link rel="stylesheet" type="text/css" href="../res/main.css">
-
+		<link rel = "stylesheet" type = "text/css" href = "../res/main.css">
+		<meta name = "description" content = "my village">
+		<meta name = "author" content = "Joseph Lahiru Rasanjana - TG/2019/525">
 	</head>
 	<body>
 		<b><div id = "heading">MY VILLAGE</div></b>
-		<div align="center"><h1 id = "name">BANDARAGAMA</h1></div>
-		<div align="center">
-			<a href="intro.html" target="_self" id = "nav">INTRO</a>
-			<a href="relPlaces.html" target="_self" id = "nav">RELIGIOUS PLACES</a>
-			<a href="schools.html" target="_self" id = "nav">SCHOOLS</a>
-			<a href="specialAtr.html" target="_self" id = "nav">SPECIAL PLACES</a>
-			<a href="beautifulPlaces.html" target="_self" id = "nav">BEAUTIFUL PLACES</a>
-			<a href="villageGov.html" target="_self" id = "nav">VILLAGE GOVERNMENT</a>
-			<a href="importantPlaces.html" target="_self" id = "nav">IMPORTANT PLACES</a>
+		<div align = "center"><h1 id = "name">BANDARAGAMA</h1></div>
+		<div align = "center">
+			<a href = "intro.html" target = "_self" id = "nav">INTRO</a>
+			<a href = "relPlaces.html" target = "_self" id = "nav">RELIGIOUS PLACES</a>
+			<a href = "schools.html" target = "_self" id = "nav">SCHOOLS</a>
+			<a href = "specialAtr.html" target = "_self" id = "nav">SPECIAL PLACES</a>
+			<a href = "beautifulPlaces.html" target = "_self" id = "nav">BEAUTIFUL PLACES</a>
+			<a href = "villageGov.html" target = "_self" id = "nav">VILLAGE GOVERNMENT</a>
+			<a href = "importantPlaces.html" target = "_self" id = "nav">IMPORTANT PLACES</a>
 		</div>
-		<p><img src="../res/CAPTURE.PNG" id = "img1" alt="IMAGE OF BANDARAGAMA MAP"></p>
+		<p><img src = "../res/CAPTURE.PNG" id = "img1" alt = "IMAGE OF BANDARAGAMA MAP"></p>
 
-		<div align="center">
+		<div align = "center">
 			<div id ="para">
 				Bandaragama<br> is a village that is situated in<br>Kaluthara District,<br>Western Province,<br>Sri Lanka. 
 			</div>
 		</div><br><br>
 
-		<div id="fotter">
+		<div id = "fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
 	</body>
