finished important places

--- a/codes/importantPlaces.html
+++ b/codes/importantPlaces.html
@@ -22,7 +22,11 @@
 			<img src = "../res/policeban.PNG" id = "img1"><br>
 			<h2 id = "name1">Bandaragama Post Office</h2>
 			<img src = "../res/postban.jpg" id = "img1"><br>
-		</div>
+			<h2 id = "name1">Bandaragama District Hospital</h2>
+			<img src = "../res/hospitalban.PNG" id = "img1"><br>
+			<h2 id = "name1">Bandaragama Pradeshiya Sabha</h2>
+			<img src = "../res/pradeshiyasabhaban.PNG" id = "img1"><br>
+		</div><br>
 		<div id="fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
