--- a/codes/index.html
+++ b/codes/index.html
@@ -5,6 +5,7 @@
 		<link rel = "stylesheet" type = "text/css" href = "../res/main.css">
 		<meta name = "description" content = "my village">
 		<meta name = "author" content = "Joseph Lahiru Rasanjana - TG/2019/525">
+		<!--<meta http-equiv="refresh" content="15">-->
 	</head>
 	<body>
 		<b><div id = "heading">MY VILLAGE</div></b>
