--- a/codes/index.html
+++ b/codes/index.html
@@ -18,15 +18,13 @@
 			<a href = "beautifulPlaces.html" target = "_self" id = "nav">BEAUTIFUL PLACES</a>
 			<a href = "villageGov.html" target = "_self" id = "nav">VILLAGE GOVERNMENT</a>
 			<a href = "importantPlaces.html" target = "_self" id = "nav">IMPORTANT PLACES</a>
+			<br><br><br>
+			<div id = "para">
+				Bandaragama is a village that is situated in Kaluthara District, Western Province, Sri Lanka.<br>
+				_ _ _
+			</div>
 		</div>
 		<p><img src = "../res/CAPTURE.PNG" id = "img1" alt = "IMAGE OF BANDARAGAMA MAP"></p>
-
-		<div align = "center">
-			<div id ="para">
-				Bandaragama<br> is a village that is situated in<br>Kaluthara District,<br>Western Province,<br>Sri Lanka. 
-			</div>
-		</div><br><br>
-
 		<div id = "fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
