--- a/codes/index.html
+++ b/codes/index.html
@@ -24,7 +24,7 @@
 				_ _ _
 			</div>
 		</div>
-		<p><img src = "../res/CAPTURE.PNG" id = "img1" alt = "IMAGE OF BANDARAGAMA MAP"></p>
+		<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31699.987009100943!2d79.96992150462505!3d6.708865761395129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2496ac4ce5535%3A0xd2ed928760ec3c50!2sBandaragama!5e0!3m2!1sen!2slk!4v1603094644495!5m2!1sen!2slk" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" id="imgMap"></iframe></p>
 		<div id = "fotter">
 			<fotter>|  J  |  O  |  S  |  E  |  P  |   H  |  _  |  R  |  A  |  S  |  A  |  N  | J | A | N | A | - | M | Y | _ | V | I | L | L | A | G | E |</fotter>
 		</div>
