--- a/codes/index.html
+++ b/codes/index.html
@@ -18,6 +18,7 @@
 			<a href = "beautifulPlaces.html" target = "_self" id = "nav">BEAUTIFUL PLACES</a>
 			<a href = "villageGov.html" target = "_self" id = "nav">VILLAGE GOVERNMENT</a>
 			<a href = "importantPlaces.html" target = "_self" id = "nav">IMPORTANT PLACES</a>
+			<a href="login.html" target="_self" id = "navL">LOGIN</a>
 			<br><br><br>
 			<div id = "para">
 				Bandaragama is a village that is situated in Kaluthara District, Western Province, Sri Lanka.<br>
