--- a/codes/login.html
+++ b/codes/login.html
@@ -11,7 +11,7 @@
 		<div id="nameL">LOGIN</div>
 
 		<div id="form">
-		  <form name="myForm" action="" onsubmit="return validate()" method="post">
+		  <form name="myForm" action="index.html" onsubmit="return validate()" method="post">
 		    First Name <br>
 		    <input type="text" id="fname" name="firstname">
 
